@@ -13,6 +13,8 @@ Version 1.5.9+svn:
    * Fixed an exception when a certain characters weren't escaped
  * Multiplayer
    * Added support for observers to pause and continue the game at any time
+   * Fixed bug #12896: Map generator does not sync between clients when
+     advancing in MP campaigns
  * Miscellaneous and bug fixes:
    * Fix bug #12946: [menu_item]/[command] losing function when called again
    * Fix flickering of units in the second part of the tutorial (bug #12923)
